# takeout-metadata-writer

./: .gitignore  LICENSE  README.md  pyproject.toml  research.md
.atl/: .skill-registry.cache.json  skill-registry.md
openspec/: config.yaml
openspec/changes/archive/2026-07-14-core-processor/: design.md  exploration.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-14-tui-textual/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-14-tui-textual/specs/tui-textual/: spec.md
openspec/changes/core-processor/: proposal.md  tasks.md
openspec/specs/core-processor/: spec.md
takeout_metadata_writer/: __main__.py  app.py  app.tcss  cli.py  core.py  exif.py  models.py  platform.py  screens.py  tui.py
