[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "takeout-metadata-writer"
version = "0.1.0"
description = "Restore Google Takeout media timestamps from companion metadata"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["takeout_metadata_writer*"]
